# Rune

./: .breakpoints  Flask.py  OCs.json  Procfile  README.md  config.py  express.py  keep_alive.py  main.py  pyproject.toml  requirements.txt
Archived/: (Old) main.py  OCs.json
Discoveries/: Arguments.py  Attachments.py  Delete Original Message.py  Detect_Bot.py  Determining_Type.py  For_In_Loop_Content.py  For_Loop_Content.py  Merging_Strings_n_Objects.py  Message_For_In_Loops.py  Message_Includes.py  Random_Numbers.py  Sleep.py  URLs to Bytes.py
Discoveries/Discord.py Events/: Creating_Discord_Events.py  Importing_Discord_Events.py
Discoveries/JSON as Database/: Create.py  Delete.py  Edit OC.py  Map.py  OCs.json  Proper Map.py  get.py
Exports/: Communication.py  Compliment.py
RuneChats/: Rune.py
Storages/: Annoys.json  OCs.json  Warnings.json
