[tool.poetry]
name = "rune-discordpy"
version = "0.1.0"
description = ""
authors = ["NovaGalaxii <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
"discord.py" = "^1.7.1"
asyncio = "^3.4.3"
Flask = "^1.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
