[tool.poetry]
name = "repl_python3_Rune-Discordpy"
version = "0.1.1"
description = ""
authors = ["Novan1ty <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
"vacefron.py" = "1.6.2"
"discord.py" = "^1.7.2"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
